--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   # state management
   flutter_bloc: ^8.1.3
 
+  # currency converter
+  forex_conversion: ^0.0.2
+
   # dependency injection
   get_it: ^7.6.0
 
